# SLI-5.1-cubesat_project

./: .gitignore  README.md  Screencast from 2026-04-08 14-18-51.webm
dockerfiles/: ubuntu_24_jazzy_python_311_minimal.dockerfile
jazzy_ws/src/orbit_interfaces/: CMakeLists.txt  package.xml
jazzy_ws/src/orbit_interfaces/msg/: OrbitState.msg  ThrustCmd.msg
jazzy_ws/src/orbit_interfaces/srv/: SpawnBody.srv  StepIntegration.srv
jazzy_ws/src/sli/: CMakeLists.txt  package.xml
jazzy_ws/src/sli/config/: example_orbit_scene.yaml  orbit_scene.yaml
jazzy_ws/src/sli/launch/: orbit.launch.py  orbit.launch.xml  orbitcpp.launch.py
jazzy_ws/src/sli/scripts/: cw_node.py  isaac_bridge_node.py  orbit_control_node.py  orbit_vel_node.py  run_orbit.py  scene_loader_node.py
jazzy_ws/src/sli/urdf/bigsat/: bigsat.urdf  bigsat.usd
jazzy_ws/src/sli/urdf/smallsat/: smallsat.urdf  smallsat.usd
jazzy_ws/src/sli/urdf/smallsat/sensorsat/: smallsat.usd  smallsat_clean.usd
jazzy_ws/src/sli/usd_files/earth/: earthmodel.usd
jazzy_ws/src/sli_gnc/: CMakeLists.txt  package.xml
jazzy_ws/src/sli_gnc/src/: cw_node.cpp  isaac_bridge_node.cpp  orbit_vel_node.cpp  teleop_node.cpp
