cmake_minimum_required(VERSION 3.8)
project(sli)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(DIRECTORY launch config scripts usd_files urdf
  DESTINATION share/${PROJECT_NAME}
)

install(PROGRAMS scripts/scene_loader_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME scene_loader_node
)
install(PROGRAMS scripts/orbit_vel_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME orbit_vel_node
)
install(PROGRAMS scripts/isaac_bridge_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME isaac_bridge_node
)
install(PROGRAMS scripts/cw_node.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME cw_node
)

ament_package()
